samples/_failures_safe/1761202967_83ea5d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_77729dfa.c: In function ‘main’:
./samples/SAFE/__tmp_77729dfa.c:199:5: error: expected declaration or statement at end of input
  199 |     printf("----\t-----\n");
      |     ^~~~~~
